--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -234,16 +234,15 @@ input[type='radio']:checked {
         padding: 8rem 10rem;
         max-height: none;
         height: 150rem;
+        margin-left: -7rem;
     }
 
     #graph-line-roc-curve{
-        margin-left: -7rem !important;
         height: 50rem !important;
-        margin-bottom: 7rem;
+        margin: 4rem 0 7rem 0rem !Important
     }
 
     #graph-pie-confusion-matrix{
-        margin-left: -7rem !important;
         height: 75rem !important;
     }
 }
