Fixed mobile layout space between graphs

--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -210,6 +210,8 @@ input[type='radio']:checked {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
+        height: 200rem !important;
     }
 
     #svm-graph-container {
