--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -131,15 +131,21 @@
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
-  font-size: 62.5%; }
+  font-size: 50%;
+ }
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: rgb(50, 50, 50); 
   margin: 0!important;
   }
+
+.instruction {
+  background-color:coral;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 1800px;
+}
 
 
 /* Typography
@@ -147,8 +153,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
-  font-weight: 300; }
-h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; }
+  font-weight: 300;
+  font-family: 'Arial';
+ }
+h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color: rgb(55, 126, 242); margin-top: 50px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
@@ -156,7 +164,10 @@ h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-botto
 h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
 
 p {
-  margin-top: 0; }
+  margin-top: 0;
+  font-family: 'Arial';
+  white-space: pre;
+  }
 
 
 /* Blockquotes
@@ -193,6 +204,7 @@ input[type="button"] {
   color: #555;
   text-align: center;
   font-size: 11px;
+  font-family: 'Arial';
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
@@ -259,7 +271,7 @@ select {
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; 
-  font-family: inherit;
+  font-family: 'Arial';
   font-size: inherit; /*https://stackoverflow.com/questions/6080413/why-doesnt-input-inherit-the-font-from-body*/}
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
@@ -345,7 +357,9 @@ td:last-child {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 button,
 .button {
-  margin-bottom: 0rem; }
+  margin-bottom: 0rem; 
+
+}
 input,
 textarea,
 select,
