--- a/apps/dash-live-model-training/assets/base.css
+++ b/apps/dash-live-model-training/assets/base.css
@@ -607,7 +607,7 @@ there.
     width: 20%;
   }
 
-  #radio-display-mode-accuracy {
+  /* #radio-display-mode-accuracy {
     float: right;
   }
 
@@ -639,14 +639,14 @@ there.
     float: right;
   }
   .plot-display-text {
-    float: left;
-  }
+    float: left; 
+  } 
 
-  /* #dropdown-demo-dataset {
+  #dropdown-demo-dataset {
     width: 30%;
   }
 
   #dropdown-simulation-model {
     width: 30%;
-  } */
+  }*/
 }
