--- a/apps/dash-datashader/assets/style.css
+++ b/apps/dash-datashader/assets/style.css
@@ -44,11 +44,23 @@ h3 {
         margin-bottom: 1rem;
     }
 
-    #header h3{
+    #header h3 {
         text-align: center;
         font-size: 2rem;
         max-width: none;
     }
+
+    #header-1 {
+        text-align: center;
+    }
+
+    #header-2 {
+        margin-top: 3rem !important;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
 }
 
 
@@ -61,6 +73,7 @@ p, #header-2 {
 #graph-1, #graph-2 {
     margin: 0 7% 5% 7%;
 }
+
 
 #header-2 {
     display: flex;
