--- a/apps/dash-datashader/assets/style.css
+++ b/apps/dash-datashader/assets/style.css
@@ -56,9 +56,11 @@ h3 {
 
     #header-2 {
         margin-top: 3rem !important;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        text-align: center;
+    }
+
+    #header-2-p {
+        margin: 0;
     }
 
 }
@@ -75,12 +77,7 @@ p, #header-2 {
 }
 
 
-#header-2 {
-    display: flex;
-    flex-direction: row;
-}
-
-strong {
+#header-2-strong {
     font-family: "Open Sans", sans-serif !important;
     font-weight: 600 !important;
     color: #75baf2 !important;
@@ -90,7 +87,6 @@ strong {
     margin: 0 0 0 0.5rem;
     padding: 0;
 }
-
 
 ._dash-undo-redo {
     display: none;
