--- a/apps/dash-stitching/assets/bWLwgP.css
+++ b/apps/dash-stitching/assets/bWLwgP.css
@@ -148,7 +148,10 @@ h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-botto
 h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
 
 p {
-  margin-top: 0; }
+  margin-top: 0; white-space: pre;
+}
+
+
 
 
 /* Blockquotes
