--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -42,11 +42,12 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
-  width: 100%;
+  width: 40%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+ }
 .column,
 .columns {
   width: 100%;
@@ -132,6 +133,7 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 50%;
+  /* height:100%; */
  }
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
@@ -140,23 +142,27 @@ body {
   margin: 0!important;
   }
 
+  
 .instruction {
-  background-color:coral;
-  height: 100%;
+  background-color:#01183A;
   width: 100%;
-  margin-bottom: 1800px;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
 }
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0;
+  text-align: center;
   font-weight: 300;
   font-family: 'Arial';
  }
-h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color: rgb(55, 126, 242); margin-top: 50px;}
+h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 50px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
@@ -166,8 +172,26 @@ h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.7
 p {
   margin-top: 0;
   font-family: 'Arial';
+  font-size: 1.4rem;
   white-space: pre;
-  }
+  color: #8898B2;
+}
+
+
+label {
+  margin-top: 10px;
+  margin-left: 4%;
+  color: #8898B2;
+}
+
+.result {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.tabs {
+  width: 70%;
+}
 
 
 /* Blockquotes
@@ -198,10 +222,10 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  display: inline-block;
+  margin-left: 4%;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #FBFFFF;
   text-align: center;
   font-size: 11px;
   font-family: 'Arial';
@@ -211,11 +235,12 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  background-color: #4181FF;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid;
   cursor: pointer;
-  box-sizing: border-box; }
+  box-sizing: border-box; 
+}
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
@@ -263,6 +288,7 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
+  margin-left: 4%;
   height: 38px;
   width: 270px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
