--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -158,10 +158,12 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  text-align: center;
+  text-align: left;
   font-weight: 300;
-  font-family: 'Arial';
- }
+  font-family: 'Geneva';
+  margin-left: 4%;
+}
+
 h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 50px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
@@ -171,15 +173,16 @@ h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.7
 
 p {
   margin-top: 0;
-  font-family: 'Arial';
+  font-family: 'Geneva';
   font-size: 1.4rem;
   white-space: pre;
   color: #8898B2;
+  overflow-wrap: normal;
 }
 
 
 label {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 4%;
   color: #8898B2;
 }
@@ -224,11 +227,12 @@ input[type="reset"],
 input[type="button"] {
   margin-left: 4%;
   height: 38px;
-  padding: 0 30px;
+  width: 140px;
+  padding: 0;
   color: #FBFFFF;
   text-align: center;
   font-size: 11px;
-  font-family: 'Arial';
+  font-family: 'Geneva';
   font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
@@ -240,6 +244,7 @@ input[type="button"] {
   border: 1px solid;
   cursor: pointer;
   box-sizing: border-box; 
+  
 }
 .button:hover,
 button:hover,
@@ -290,14 +295,14 @@ textarea,
 select {
   margin-left: 4%;
   height: 38px;
-  width: 270px;
+  width: 230px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
   border: 1px solid #D1D1D1;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; 
-  font-family: 'Arial';
+  font-family: 'Geneva';
   font-size: inherit; /*https://stackoverflow.com/questions/6080413/why-doesnt-input-inherit-the-font-from-body*/}
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
@@ -364,12 +369,13 @@ li {
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  border: 1px solid black;
 }
 th,
 td {
   padding: 12px 15px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #E1E1E1; }
 th:first-child,
 td:first-child {
