--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -164,7 +164,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 4%;
 }
 
-h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 50px;}
+h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 30px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
@@ -182,9 +182,10 @@ p {
 
 
 label {
-  margin-top: 20px;
+  margin-top: 15px;
   margin-left: 4%;
-  color: #8898B2;
+  color:#407DFA;
+  font-family: 'Geneva'
 }
 
 .result {
@@ -194,6 +195,8 @@ label {
 
 .tabs {
   width: 70%;
+  font-family: 'Geneva';
+  height: 50%;
 }
 
 
@@ -220,7 +223,6 @@ a:hover {
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.button,
 button,
 input[type="submit"],
 input[type="reset"],
@@ -233,7 +235,56 @@ input[type="button"] {
   text-align: center;
   font-size: 11px;
   font-family: 'Geneva';
-  font-weight: 600;
+  font-weight: 200;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #4181FF;
+  border-radius: 30px;
+  border: 1px solid white;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+
+.button_instruction,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  margin-left: 4%;
+  height: 38px;
+  width: 140px;
+  padding: 0;
+  color: #FBFFFF;
+  text-align: center;
+  font-size: 11px;
+  font-family: 'Geneva';
+  font-weight: 200;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #4181FF;
+  border: 1px solid white;
+  cursor: pointer;
+  box-sizing: border-box; 
+}
+
+.button_result,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  margin-left: 4%;
+  height: 38px;
+  width: 140px;
+  padding: 0;
+  color: #FBFFFF;
+  text-align: center;
+  font-size: 11px;
+  font-family: 'Geneva';
+  font-weight: 200;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
@@ -243,9 +294,11 @@ input[type="button"] {
   border-radius: 4px;
   border: 1px solid;
   cursor: pointer;
-  box-sizing: border-box; 
-  
+  box-sizing: border-box;
 }
+
+
+
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
