--- a/apps/dash-web-trader/assets/style.css
+++ b/apps/dash-web-trader/assets/style.css
@@ -422,7 +422,6 @@ body{
 }
 
 tr{
-  border: 1px solid pink;
   padding: 12px;
 }
 
@@ -447,7 +446,7 @@ tr{
 }
 
 .div-right-panel{
-  padding: 80px 32px 32px 32px;
+  padding: 80px 64px 64px 32px;
 }
 
 .div-bid-ask{
@@ -460,6 +459,17 @@ tr{
   font-size: 26px;
 }
 
+.div-info{
+  padding-bottom: 12px;
+}
+
+.div-bottom-panel{
+  margin: 9px 5px 0px 5px;
+  padding: 5;
+  height: 21%;
+  background-color: #22252b;
+}
+
 .p-top-bar{
   color: #b2b2b2;
   font-size: 14px;
@@ -468,6 +478,7 @@ tr{
 .header-bid-ask{
   text-align: center;
   padding-left: 10px;
+  color: #ededed;
 }
 
 .logo{
@@ -475,7 +486,52 @@ tr{
 }
 
 .chart-top-bar{
-  padding: 3px;
-  margin: 0px 0px 5px 0px;
+  padding: 12px;
   background-color: #30333d;
 }
+
+
+div.Select-value, .Select-control,div.period, .Select-input{
+  padding:0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Select-control{
+  background-color: inherit;
+  color:#b4b4b4;
+  border-color: rgba(180, 180, 180, 0.4);
+  border-radius: 20px 20px 20px 20px / 50% 50% 50% 50%;
+}
+
+.no-profit{
+  background: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,0,0,1));
+}
+
+.profit{
+  background: linear-gradient(to bottom, rgba(0,255,0,0), rgba(0,255,0,1));
+}
+
+.Select-value-label{
+  position: relative;
+  padding: 0 10px;
+}
+
+.has-value.Select--single>.Select-control .Select-value .Select-value-label, .has-value.is-pseudo-focused.Select--single>.Select-control .Select-value .Select-value-label{
+  color:#b4b4b4;
+}
+
+.Select.is-open> .Select-control{
+  border-radius: 20px 20px 20px 20px / 50% 50% 50% 50%;
+  background-color: inherit;
+}
+
+.Select-menu-outer {
+  margin-top: 7px;
+  background-color: #262a30;
+  border: 1px solid #b4b4b4;
+  border-radius: 4px;
+  z-index: 1000;
+}
+
